--- a/assets/style.css
+++ b/assets/style.css
@@ -62,6 +62,8 @@ p{
 }
 button{
     cursor: pointer;
+    background-color: transparent;
+    border: none;
 }
 a{
     text-decoration: none;
@@ -86,7 +88,7 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: rotate(-112deg);
+    transition: ease 3s;
 }
 .botao_secundario, .botao_principal{
     width: max(30px,2vw);
@@ -98,54 +100,21 @@ a{
     padding: 1rem;
     margin: 0.5rem;
     border-radius: 50%;
-    box-shadow: 0 0 20px rgba(0, 0,0, 0.2);
-    transform: rotate(112deg);
+    box-shadow: 0 0 20px rgba(0, 0,0, 0.2); 
 }
 .botao_principal{
     background-color: var(--dark_color);
     fill: #DFDBE2;
-    cursor: pointer;
+    cursor: pointer;  
 }
 
-.botao_principal:hover{
-    transform: rotate(112deg) scale(1.1);
+.botao_principal:hover, .botao_secundario:hover{
+    transform:scale(1.1);
     
 }
-.botao_secundario:hover{
-    transform: scale(1.1);
-}
-
-span{
-    position: absolute;
-    transform: rotate(calc(var(--i)*180deg/4)) translateY(120px);
-}
-
-.botao_secundario{
-    transform: (calc(var(--i)*180deg/-4))
-}
-#heart{
-    transform: rotate(-68deg);
-}
-#heart:hover{
-    transform: rotate(-68deg) scale(1.1);
-}
-#movie{
-    transform: rotate(-22deg);
-}
-#movie:hover{
-    transform: rotate(-22deg) scale(1.1)
-}
-#wireless{
-    transform: rotate(22deg);
-}
-#wireless:hover{
-    transform: rotate(22deg) scale(1.1)
-}
-#curious{
-    transform: rotate(68deg);
-}
-#curious:hover{
-    transform: rotate(68deg) scale(1.1)
+.open{
+    position: static;
+    display: block;
 }
 
 footer{
